temp placement for projects

--- a/index.html
+++ b/index.html
@@ -55,107 +55,101 @@
         </div>
         <div class="content">
             <div class="projects">
-                <p>Your Projects</p>
-                <div>
-                    <div class="project">
-                        <p>Title</p>
-                        <p>Text content.</p>
-                        <div class="buttons">
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                        </div>
+                <h3>Annoucements</h3>
+                <div class="project">
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
                     </div>
-                    <div class="project">
-                        <p>Title</p>
-                        <p>Text content.</p>
-                        <div class="buttons">
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                        </div>
+                </div>
+                <div class="project">
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
                     </div>
-                    <div class="project">
-                        <p>Title</p>
-                        <p>Text content.</p>
-                        <div class="buttons">
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                        </div>
+                </div>
+                <div class="project">
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
                     </div>
-                    <div class="project">
-                        <p>Title</p>
-                        <p>Text content.</p>
-                        <div class="buttons">
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                        </div>
+                </div>
+                <div class="project">
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
                     </div>
-                    <div class="project">
-                        <p>Title</p>
-                        <p>Text content.</p>
-                        <div class="buttons">
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                        </div>
+                </div>
+                <div class="project">
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
                     </div>
-                    <div class="project">
-                        <p>Title</p>
-                        <p>Text content.</p>
-                        <div class="buttons">
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                        </div>
+                </div>
+                <div class="project">
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
                     </div>
                 </div>
             </div>
             <div>
-                <div>
-                    <div>
-                        <p>Annoucements</p>
+                <h3>Annoucements</h3>
+                <div class="updates">
+                    <div class="update">
+                        <p>Site Maintaince</p>
+                        <p>Text content...</p>
                     </div>
-                    <div class="updates">
-                        <div class="update">
-                            <p>Site Maintaince</p>
-                            <p>Text content...</p>
-                        </div>
-                        <div class="update">
-                            <p>Community Share Day</p>
-                            <p>Text content...</p>
-                        </div>
-                        <div class="update">
-                            <p>Updated Privacy Policy</p>
-                            <p>Text content...</p>
-                        </div>
+                    <div class="update">
+                        <p>Community Share Day</p>
+                        <p>Text content...</p>
+                    </div>
+                    <div class="update">
+                        <p>Updated Privacy Policy</p>
+                        <p>Text content...</p>
                     </div>
                 </div>
-                <div>
-                    <p>Trending</p>
-                    <div class="people">
-                        <div class="person">
-                            <img class="user">
-                            <p>@username</p>
-                            <p>Subtext.</p>
-                        </div>
-                        <div class="person">
-                            <img class="user">
-                            <p>@username</p>
-                            <p>Subtext.</p>
-                        </div>
-                        <div class="person">
-                            <img class="user">
-                            <p>@username</p>
-                            <p>Subtext.</p>
-                        </div>
-                        <div class="person">
-                            <img class="user">
-                            <p>@username</p>
-                            <p>Subtext.</p>
-                        </div>
+            </div>
+            <div>
+                <p>Trending</p>
+                <div class="people">
+                    <div class="person">
+                        <img class="user">
+                        <p>@username</p>
+                        <p>Subtext.</p>
+                    </div>
+                    <div class="person">
+                        <img class="user">
+                        <p>@username</p>
+                        <p>Subtext.</p>
+                    </div>
+                    <div class="person">
+                        <img class="user">
+                        <p>@username</p>
+                        <p>Subtext.</p>
+                    </div>
+                    <div class="person">
+                        <img class="user">
+                        <p>@username</p>
+                        <p>Subtext.</p>
                     </div>
                 </div>
             </div>
