Functional title and project grid

--- a/index.html
+++ b/index.html
@@ -55,7 +55,63 @@
         </div>
         <div class="content">
             <div class="projects">
-                <h3>Annoucements</h3>
+                <div class="title">
+                    <h3>Projects</h3>
+                </div>
+                <div class="project">
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                    </div>
+                </div>
+                <div class="project">
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                    </div>
+                </div>
+                <div class="project">
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                    </div>
+                </div>
+                <div class="project">
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                    </div>
+                </div>
+                <div class="project">
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                    </div>
+                </div>
+                <div class="project">
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                    </div>
+                </div>
                 <div class="project">
                     <p>Title</p>
                     <p>Text content.</p>
@@ -111,46 +167,47 @@
                     </div>
                 </div>
             </div>
-            <div>
+        <div class="news">
+            <div class="title">
                 <h3>Annoucements</h3>
-                <div class="updates">
-                    <div class="update">
-                        <p>Site Maintaince</p>
-                        <p>Text content...</p>
-                    </div>
-                    <div class="update">
-                        <p>Community Share Day</p>
-                        <p>Text content...</p>
-                    </div>
-                    <div class="update">
-                        <p>Updated Privacy Policy</p>
-                        <p>Text content...</p>
-                    </div>
+            </div>
+            <div class="updates">
+                <div class="update">
+                    <p>Site Maintaince</p>
+                    <p>Text content...</p>
+                </div>
+                <div class="update">
+                    <p>Community Share Day</p>
+                    <p>Text content...</p>
+                </div>
+                <div class="update">
+                    <p>Updated Privacy Policy</p>
+                    <p>Text content...</p>
                 </div>
             </div>
-            <div>
-                <p>Trending</p>
-                <div class="people">
-                    <div class="person">
-                        <img class="user">
-                        <p>@username</p>
-                        <p>Subtext.</p>
-                    </div>
-                    <div class="person">
-                        <img class="user">
-                        <p>@username</p>
-                        <p>Subtext.</p>
-                    </div>
-                    <div class="person">
-                        <img class="user">
-                        <p>@username</p>
-                        <p>Subtext.</p>
-                    </div>
-                    <div class="person">
-                        <img class="user">
-                        <p>@username</p>
-                        <p>Subtext.</p>
-                    </div>
+            <div class="title">
+                <h3>Trending</h3>
+            </div>
+            <div class="people">
+                <div class="person">
+                    <img class="user">
+                    <p>@username</p>
+                    <p>Subtext.</p>
+                </div>
+                <div class="person">
+                    <img class="user">
+                    <p>@username</p>
+                    <p>Subtext.</p>
+                </div>
+                <div class="person">
+                    <img class="user">
+                    <p>@username</p>
+                    <p>Subtext.</p>
+                </div>
+                <div class="person">
+                    <img class="user">
+                    <p>@username</p>
+                    <p>Subtext.</p>
                 </div>
             </div>
         </div>
