Switch to nav bar

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
             <img src="Images/logo.svg">
             <p>Dashboard</p>
         </div>
-        <ul>
-            <li>Home</li>
-            <li>Profile</li>
-            <li>Messages</li>
-            <li>History</li>
-            <li>Task</li>
-            <li>Communities</li>
-        </ul>
-        <ul>
-            <li>Settings</li>
-            <li>Support</li>
-            <li>Privacy</li>
-        </ul>
+        <nav>
+            <a><img src="Images/home.svg"><span>Home</span></a>
+            <a><img src="Images/profile.svg"><span>Profile</span></a>
+            <a><img src="Images/message.svg"><span>Message</span></a>
+            <a><img src="Images/history.svg"><span>History</span></a>
+            <a><img src="Images/tasks.svg"><span>Tasks</span></a>
+            <a><img src="Images/community.svg"><span>Communities</span></a>
+        </nav>
+        <nav>
+            <a><img src="Images/setting.svg"><span>Settings</span></a>
+            <a><img src="Images/support.svg"><span>Support</span></a>
+            <a><img src="Images/privacy.svg"><span>Privacy</span></a>
+        </nav>
     </div>
     <div class="container">
         <div class="header">
