Cleaning up nav

--- a/index.html
+++ b/index.html
@@ -11,20 +11,18 @@
     <div class="sidebar">
         <div class="logo">
             <img src="Images/logo.svg">
-            <p>Dashboard</p>
+            <h1>Dashboard</h1>
         </div>
         <nav>
-            <a><img src="Images/home.svg"><span>Home</span></a>
-            <a><img src="Images/profile.svg"><span>Profile</span></a>
-            <a><img src="Images/message.svg"><span>Message</span></a>
-            <a><img src="Images/history.svg"><span>History</span></a>
-            <a><img src="Images/tasks.svg"><span>Tasks</span></a>
-            <a><img src="Images/community.svg"><span>Communities</span></a>
-        </nav>
-        <nav>
-            <a><img src="Images/setting.svg"><span>Settings</span></a>
-            <a><img src="Images/support.svg"><span>Support</span></a>
-            <a><img src="Images/privacy.svg"><span>Privacy</span></a>
+            <a title="Home" href="#"><img src="Images/home.svg"><h3>Home</h3></a>
+            <a title="Profile" href="#"><img src="Images/profile.svg"><h3>Profile</h3></a>
+            <a title="Message" href="#"><img src="Images/message.svg"><h3>Message</h3></a>
+            <a title="History" href="#"><img src="Images/history.svg"><h3>History</h3></a>
+            <a title="Tasks" href="#"><img src="Images/tasks.svg"><h3>Tasks</h3></a>
+            <a title="Communities" href="#"><img src="Images/community.svg"><h3>Communities</h3></a>
+            <a title="Settings" href="#"><img src="Images/setting.svg"><h3>Settings</h3></a>
+            <a title="Support" href="#"><img src="Images/support.svg"><h3>Support</h3></a>
+            <a title="Privacy" href="#"><img src="Images/privacy.svg"><h3>Privacy</h3></a>
         </nav>
     </div>
     <div class="container">
