Switching wrapper classes for elements

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="javascript.js"></script>
 </head>
 <body>
-    <div class="sidebar">
+    <aside>
         <div class="logo">
             <img src="Images/logo.svg">
             <h1>Dashboard</h1>
@@ -24,9 +24,9 @@
             <a title="Support" href="#"><img src="Images/support.svg"><h3>Support</h3></a>
             <a title="Privacy" href="#"><img src="Images/privacy.svg"><h3>Privacy</h3></a>
         </nav>
-    </div>
+    </aside>
     <div class="container">
-        <div class="header">
+        <header>
             <div class="top">
                 <div>
                     <button class="icon"><img class="search"></button>
@@ -50,8 +50,8 @@
                     <button>Share</button>
                 </div>
             </div>
-        </div>
-        <div class="content">
+        </header>
+        <main>
             <div class="projects">
                 <div class="title">
                     <h3>Projects</h3>
@@ -208,7 +208,7 @@
                     <p>Subtext.</p>
                 </div>
             </div>
-        </div>
+        </main>
     </div>
 </body>
 </html>
