--- a/index.html
+++ b/index.html
@@ -25,190 +25,186 @@
             <a title="Privacy" href="#"><img src="Images/privacy.svg"><h3>Privacy</h3></a>
         </nav>
     </aside>
-    <div class="container">
-        <header>
-            <div class="top">
-                <div>
-                    <button class="icon"><img class="search"></button>
-                    <input>
-                </div>
-                <div>
-                    <button class="icon"><img class="alert"></button>
-                    <img class="logo">
-                    <p>Username</p>
-                </div>
+    <header>
+        <div>
+                <a title="Search" href="#"><img src="Images/search.svg"></button>
+                <input >
+            <div>
+                <button class="icon"><img class="alert"></button>
+                <img class="logo">
+                <p>Username</p>
             </div>
-            <div class="bottom">
-                <div>
-                    <img class="large logo">
-                    <p>Hi there,</p>
-                    <p>Username (@userID)</p>
-                </div>
-                <div>
-                    <button>New</button>
-                    <button>Upload</button>
-                    <button>Share</button>
-                </div>
+        </div>
+        <div class="bottom">
+            <div>
+                <img class="large logo">
+                <p>Hi there,</p>
+                <p>Username (@userID)</p>
             </div>
-        </header>
-        <main>
-            <div class="projects">
-                <div class="title">
-                    <h3>Projects</h3>
-                </div>
-                <div class="project">
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                    </div>
-                </div>
-                <div class="project">
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                    </div>
-                </div>
-                <div class="project">
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                    </div>
-                </div>
-                <div class="project">
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                    </div>
-                </div>
-                <div class="project">
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                    </div>
-                </div>
-                <div class="project">
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                    </div>
-                </div>
-                <div class="project">
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                    </div>
-                </div>
-                <div class="project">
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                    </div>
-                </div>
-                <div class="project">
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                    </div>
-                </div>
-                <div class="project">
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                    </div>
-                </div>
-                <div class="project">
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                    </div>
-                </div>
-                <div class="project">
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                    </div>
-                </div>
+            <div>
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
             </div>
-        <div class="news">
+        </div>
+    </header>
+    <main>
+        <div class="projects">
             <div class="title">
-                <h3>Annoucements</h3>
+                <h3>Projects</h3>
             </div>
-            <div class="updates">
-                <div class="update">
-                    <p>Site Maintaince</p>
-                    <p>Text content...</p>
-                </div>
-                <div class="update">
-                    <p>Community Share Day</p>
-                    <p>Text content...</p>
-                </div>
-                <div class="update">
-                    <p>Updated Privacy Policy</p>
-                    <p>Text content...</p>
+            <div class="project">
+                <p>Title</p>
+                <p>Text content.</p>
+                <div class="buttons">
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
                 </div>
             </div>
-            <div class="title">
-                <h3>Trending</h3>
-            </div>
-            <div class="people">
-                <div class="person">
-                    <img class="user">
-                    <p>@username</p>
-                    <p>Subtext.</p>
-                </div>
-                <div class="person">
-                    <img class="user">
-                    <p>@username</p>
-                    <p>Subtext.</p>
-                </div>
-                <div class="person">
-                    <img class="user">
-                    <p>@username</p>
-                    <p>Subtext.</p>
-                </div>
-                <div class="person">
-                    <img class="user">
-                    <p>@username</p>
-                    <p>Subtext.</p>
+            <div class="project">
+                <p>Title</p>
+                <p>Text content.</p>
+                <div class="buttons">
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
                 </div>
             </div>
-        </main>
-    </div>
+            <div class="project">
+                <p>Title</p>
+                <p>Text content.</p>
+                <div class="buttons">
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
+                </div>
+            </div>
+            <div class="project">
+                <p>Title</p>
+                <p>Text content.</p>
+                <div class="buttons">
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
+                </div>
+            </div>
+            <div class="project">
+                <p>Title</p>
+                <p>Text content.</p>
+                <div class="buttons">
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
+                </div>
+            </div>
+            <div class="project">
+                <p>Title</p>
+                <p>Text content.</p>
+                <div class="buttons">
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
+                </div>
+            </div>
+            <div class="project">
+                <p>Title</p>
+                <p>Text content.</p>
+                <div class="buttons">
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
+                </div>
+            </div>
+            <div class="project">
+                <p>Title</p>
+                <p>Text content.</p>
+                <div class="buttons">
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
+                </div>
+            </div>
+            <div class="project">
+                <p>Title</p>
+                <p>Text content.</p>
+                <div class="buttons">
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
+                </div>
+            </div>
+            <div class="project">
+                <p>Title</p>
+                <p>Text content.</p>
+                <div class="buttons">
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
+                </div>
+            </div>
+            <div class="project">
+                <p>Title</p>
+                <p>Text content.</p>
+                <div class="buttons">
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
+                </div>
+            </div>
+            <div class="project">
+                <p>Title</p>
+                <p>Text content.</p>
+                <div class="buttons">
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
+                    <button class="icon"><img></button>
+                </div>
+            </div>
+        </div>
+    <div class="news">
+        <div class="title">
+            <h3>Annoucements</h3>
+        </div>
+        <div class="updates">
+            <div class="update">
+                <p>Site Maintaince</p>
+                <p>Text content...</p>
+            </div>
+            <div class="update">
+                <p>Community Share Day</p>
+                <p>Text content...</p>
+            </div>
+            <div class="update">
+                <p>Updated Privacy Policy</p>
+                <p>Text content...</p>
+            </div>
+        </div>
+        <div class="title">
+            <h3>Trending</h3>
+        </div>
+        <div class="people">
+            <div class="person">
+                <img class="user">
+                <p>@username</p>
+                <p>Subtext.</p>
+            </div>
+            <div class="person">
+                <img class="user">
+                <p>@username</p>
+                <p>Subtext.</p>
+            </div>
+            <div class="person">
+                <img class="user">
+                <p>@username</p>
+                <p>Subtext.</p>
+            </div>
+            <div class="person">
+                <img class="user">
+                <p>@username</p>
+                <p>Subtext.</p>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
