Add missing user svg

--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
     </aside>
     <header>
         <div>
-                <a title="Search" href="#"><img src="Images/search.svg"></button>
-                <input >
+            <a title="Search" href="#"><img src="Images/search.svg"></button>
+            <input class="searhbar" type="search">
+        </div>
+        <a><img src="Images/bell.svg" href="#"></a>
+        <a><img src="Images/user.svg" href="#"></a>
+
+        <div>    
             <div>
                 <button class="icon"><img class="alert"></button>
                 <img class="logo">
