--- a/index.html
+++ b/index.html
@@ -27,30 +27,22 @@
     </aside>
     <header>
         <div>
-            <a title="Search" href="#"><img src="Images/search.svg"></button>
+            <a title="Search" href="#"><img src="Images/search.svg"></a>
             <input class="searhbar" type="search">
         </div>
-        <a><img src="Images/bell.svg" href="#"></a>
-        <a><img src="Images/user.svg" href="#"></a>
-
-        <div>    
-            <div>
-                <button class="icon"><img class="alert"></button>
-                <img class="logo">
-                <p>Username</p>
-            </div>
+        <div>
+            <a><img src="Images/bell.svg" href="#"></a>
+            <a><img src="Images/user.svg" href="#"></a>
+            <p>Username</p>
         </div>
-        <div class="bottom">
-            <div>
-                <img class="large logo">
-                <p>Hi there,</p>
-                <p>Username (@userID)</p>
-            </div>
-            <div>
-                <button>New</button>
-                <button>Upload</button>
-                <button>Share</button>
-            </div>
+        <div>
+            <img src="Images/user.svg" href="#">
+            <p>Hi there, Username (@username)</p>
+        </div>
+        <div>
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
         </div>
     </header>
     <main>
