--- a/index.html
+++ b/index.html
@@ -159,28 +159,23 @@
                 </div>
             </div>
         </div>
-    <div class="news">
-        <div class="title">
+        <div class="annoucements">
             <h3>Annoucements</h3>
-        </div>
-        <div class="updates">
-            <div class="update">
+            <div class="annoucement">
                 <p>Site Maintaince</p>
                 <p>Text content...</p>
             </div>
-            <div class="update">
+            <div class="annoucement">
                 <p>Community Share Day</p>
                 <p>Text content...</p>
             </div>
-            <div class="update">
+            <div class="annoucement">
                 <p>Updated Privacy Policy</p>
                 <p>Text content...</p>
             </div>
         </div>
-        <div class="title">
-            <h3>Trending</h3>
-        </div>
         <div class="people">
+            <h3>Trending</h3>
             <div class="person">
                 <img class="user">
                 <p>@username</p>
