Main grid rework

--- a/index.html
+++ b/index.html
@@ -174,24 +174,24 @@
                 <p>Text content...</p>
             </div>
         </div>
-        <div class="people">
+        <div class="trends">
             <h3>Trending</h3>
-            <div class="person">
+            <div class="trend">
                 <img class="user">
                 <p>@username</p>
                 <p>Subtext.</p>
             </div>
-            <div class="person">
+            <div class="trend">
                 <img class="user">
                 <p>@username</p>
                 <p>Subtext.</p>
             </div>
-            <div class="person">
+            <div class="trend">
                 <img class="user">
                 <p>@username</p>
                 <p>Subtext.</p>
             </div>
-            <div class="person">
+            <div class="trend">
                 <img class="user">
                 <p>@username</p>
                 <p>Subtext.</p>
