--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <aside>
-        <div class="logo">
-            <img src="Images/logo.svg">
-            <h1>Dashboard</h1>
-        </div>
         <nav>
+            <div class="logo">
+                <img src="Images/logo.svg">
+                <h1>Dashboard</h1>
+            </div>
             <a title="Home" href="#"><img src="Images/home.svg"><h3>Home</h3></a>
             <a title="Profile" href="#"><img src="Images/profile.svg"><h3>Profile</h3></a>
             <a title="Message" href="#"><img src="Images/message.svg"><h3>Message</h3></a>
@@ -39,10 +39,10 @@
             <img src="Images/user.svg" href="#">
             <p>Hi there, Username (@username)</p>
         </div>
-        <div>
-            <button>New</button>
-            <button>Upload</button>
-            <button>Share</button>
+        <div class="actions">
+            <button><h3>New</h3></button>
+            <button><h3>Upload</h3></button>
+            <button><h3>Share</h3></button>
         </div>
     </header>
     <main>
