Header styling and grid aligning

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
         </nav>
     </aside>
     <header>
-        <div>
+        <div class="search">
             <a title="Search" href="#"><img src="Images/search.svg"></a>
-            <input class="searhbar" type="search">
+            <input class="searchbar" type="search">
         </div>
-        <div>
-            <a><img src="Images/bell.svg" href="#"></a>
-            <a><img src="Images/user.svg" href="#"></a>
-            <p>Username</p>
+        <div class="notification">
+            <a class="right"><img src="Images/bell.svg" href="#"></a>
+            <a class="center"><img src="Images/user.svg" href="#"></a>
+            <h3 class="left">Username</h3>
         </div>
         <div>
             <img src="Images/user.svg" href="#">
