--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
             <a class="center"><img src="Images/user.svg" href="#"></a>
             <h3 class="left">Username</h3>
         </div>
-        <div>
+        <div class="welcome">
             <img src="Images/user.svg" href="#">
-            <p>Hi there, Username (@username)</p>
+            <div>
+                <p>Hi there,</p>
+                <h2>Username (@username)</h2>
+            </div>
         </div>
         <div class="actions">
             <button><h3>New</h3></button>
