--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <main>
         <div class="projects">
             <div class="title">
-                <h3>Projects</h3>
+                <h3>Your Projects</h3>
             </div>
             <div class="project">
                 <p>Title</p>
